[package]
name = "trybox"
version = "0.1.0"
edition = "2021"

[dependencies]
number_prefix = { version = "0.4.0", default-features = false }

[features]
std = []
default = ["std"]

[dev-dependencies]
expect-test = "1.5.0"
libtest-mimic = "0.8.1"
static_assertions = "1.1.0"

[[test]]
name = "test"
harness = false
required-features = ["std"]
