[package]
name = "trybox"
version = "0.1.1"
edition = "2021"
description = "stable, `no_std`-compatible, fallible heap allocation"
categories = ["data-structures", "rust-patterns", "no-std", "embedded"]
keywords = ["fallible", "allocation"]
license = "MIT OR Apache-2.0"
homepage = "https://crates.io/crates/trybox"
repository = "https://github.com/aatifsyed/trybox"
documentation = "https://docs.rs/trybox"
rust-version = "1.60"


[features]
std = []
default = ["std"]

[dev-dependencies]
expect-test = "1.5.0"
libtest-mimic = "0.8.1"
static_assertions = "1.1.0"

[[test]]
name = "test"
harness = false
required-features = ["std"]
